0.4.10: Fix toolbar button spacing

--- a/styles/buttons.less
+++ b/styles/buttons.less
@@ -29,7 +29,8 @@
 	background-clip: padding-box !important;
 	padding-top: 0;
 	padding-bottom: 0;
-	margin-left: @berend-padding-small !important;
+	margin-left: 0 !important; //@berend-padding-small !important;
+	font-size: @berend-font-size-medium;
 	.sheet-toolbar & {
 		margin-top: @berend-toolbar-padding !important;
 	}
