--- a/styles/toolbar.less
+++ b/styles/toolbar.less
@@ -95,6 +95,10 @@
 	margin: @berend-toolbar-padding;
 	.layout-mode-split & {
 		margin-right: -1px;
+		// Action overlay
+		&.key-commands-region {
+			margin-right: 0;
+		}
 	}
 	.header-container {
 		height: auto !important;
